# home-library

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
api/: Dockerfile  common.py  config.py  crud.py  main.py  models.py  schemas.py
api/alembic/: env.py
api/alembic/versions/: 69a1fc074dce_create_book_and_author_tables.py
api/db/: base.py  database.py
api/routers/: authors.py  books.py
api/scripts/: pre_start.py
frontend/: .gitignore  package.json
frontend/chakra-ui-pro-theme/: index.ts
frontend/src/: App.jsx  Column.jsx  Details.jsx  Layout.jsx  Navigation.jsx  Sidebar.jsx  index.js  mockData.js  theme.js
scripts/local-dev/: server-entrypoint.sh
