[tool.poetry]
name = "home-library"
version = "0.1.0"
description = "App to manage my home library."
authors = ["steventimberman <stevetimberman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.api.dependencies]
python-jose = "^3.3.0"
python-dotenv = "^0.20.0"
SQLAlchemy = "^1.4.35"
psycopg2 = "^2.9.3"
alembic = "^1.7.7"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
ujson = "^5.2.0"
email-validator = "^1.1.3"
requests = "^2.27.1"
Jinja2 = "^3.1.1"
python-multipart = "^0.0.5"
itsdangerous = "^2.1.2"
PyYAML = "^6.0"
orjson = "^3.6.7"
tenacity = "^8.0.1"

[tool.poetry.group.home_library.dependencies]
pyzotero = "^1.5.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.1"
black = "^22.3.0"
pre-commit = "^2.18.1"
pytest-cov = "^3.0.0"
coverage = "^6.3.2"
mypy = "^0.942"
isort = "^5.10.1"
flake8 = "^4.0.1"
blacken-docs = "^1.12.1"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
